Update with my own data

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="resume">
       <div class="container">
         <div class="resume__block">
-          <h1 class="contact-info__header">Bulka</h1>
-          <h3 class="contact-info__sub-header">Senior Hooman Manager</h3>
+          <h1 class="contact-info__header">Baikenych Iryna-Anastasiia</h1>
+          <h3 class="contact-info__sub-header">Full-stack developer</h3>
           <div class="contact_info_container fh">
             <div class="contact-info__block">
               <a href="" rel="author" class="contact-info__item">
@@ -24,7 +24,7 @@
                      d="M128 0c17.7 0 32 14.3 32 32V64H288V32c0-17.7 14.3-32 32-32s32 14.3 32 32V64h48c26.5 0 48 21.5 48 48v48H0V112C0 85.5 21.5 64 48 64H96V32c0-17.7 14.3-32 32-32zM0 192H448V464c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V192zm64 80v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V272c0-8.8-7.2-16-16-16H80c-8.8 0-16 7.2-16 16zm128 0v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V272c0-8.8-7.2-16-16-16H208c-8.8 0-16 7.2-16 16zm144-16c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V272c0-8.8-7.2-16-16-16H336zM64 400v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V400c0-8.8-7.2-16-16-16H80c-8.8 0-16 7.2-16 16zm144-16c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V400c0-8.8-7.2-16-16-16H208zm112 16v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V400c0-8.8-7.2-16-16-16H336c-8.8 0-16 7.2-16 16z" />
                   </svg>
                 </div>
-                <span>I'm older than you</span>
+                <span>I'm 20 years old</span>
               </a>
               <a href="" rel="author" class="contact-info__item">
                 <div class="contact-info__item-icon-wrapper">
@@ -36,7 +36,7 @@
                 </div>
                 <span>Lviv, Ukraine</span>
               </a>
-              <a href="https://ua.linkedin.com/company/binary-studio_241166" rel="author" class="contact-info__item">
+              <a href="https://www.linkedin.com/in/anastasiia-baykenych-71b99725a/" rel="author" class="contact-info__item">
                 <div class="contact-info__item-icon-wrapper">
                   <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                     <path
@@ -44,39 +44,39 @@
                     </path>
                   </svg>
                 </div>
-                <span>binary-studio</span>
+                <span>Anastasiia Baykenych</span>
               </a>
             </div>
             <div class="contact-info__block contact-info__block--center">
               <img class="contact-info__avatar" src="assets/avatar.png" alt="Avatar">
             </div>
             <div class="contact-info__block">
-              <a href="mailto:ask@binary-studio.com" rel="author" class="contact-info__item">
+              <a href="mailto:baykenych.nastya@gmail.com" rel="author" class="contact-info__item">
                 <div class="contact-info__item-icon-wrapper">
                   <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
                     <path
                       d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48H48zM0 176V384c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V176L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z" />
                   </svg>
                 </div>
-                <span>ask@binary-studio.com</span>
+                <span>baykenych.nastya@gmail.com</span>
               </a>
-              <a href="tel:+380322316454" rel="author" class="contact-info__item">
+              <a href="tel:+380975479529" rel="author" class="contact-info__item">
                 <div class="contact-info__item-icon-wrapper">
                   <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
                     <path
                       d="M80 0C44.7 0 16 28.7 16 64V448c0 35.3 28.7 64 64 64H304c35.3 0 64-28.7 64-64V64c0-35.3-28.7-64-64-64H80zM192 400a32 32 0 1 1 0 64 32 32 0 1 1 0-64z" />
                   </svg>
                 </div>
-                <span>+380 32 231 6454</span>
+                <span>+380 975 479 529</span>
               </a>
-              <a href="https://www.instagram.com/binarystudiocat/" rel="author" class="contact-info__item">
+              <a href="https://www.instagram.com/baikenich_a_/" rel="author" class="contact-info__item">
                 <div class="contact-info__item-icon-wrapper">
                   <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
                     <path
                       d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z" />
                   </svg>
                 </div>
-                <span>binary-studio-cat</span>
+                <span>baikenich_a_</span>
               </a>
             </div>
           </div>
@@ -92,10 +92,11 @@
                 </path>
               </svg>
             </div>
-            <p class="intro_text">Meow.
-              I am a Binary Studio cat. Still got 7 lives. Work in IT, Full Stack Evil,
-              all I do is sleep and try to help out hoomans with their projects whenever
-              they need me.
+            <p class="intro_text">I am seeking an opportunity to apply my expertise as
+            a Node.js developer in a forward-thinking organization
+            that values innovation and fosters professional growth. I
+            am excited to contribute my strong problem-solving
+            abilities, attention to detail, and passion for creating high-quality software solutions
             </p>
           </div>
         </div>
@@ -104,7 +105,34 @@
         <div class="resume__block">
           <div class="skills">
             <h3 class="skills__header">Skills</h3>
-            <p class="skills__text">Sleep, eat, more sleep, meow, mrrr, purr. </p>
+            <div class="skills__container">
+              <div class="skills__text">
+                <h3>Tech Skills</h3>
+                <ul>
+                  <li>JS, TS</span></li>
+                  <li>Node.js (Nest.js, Express.js)</span></li>
+                  <li>React</span></li>
+                  <li>C#</span></li>
+                  <li>Python</span></li>
+                  <li>HTML</span></li>
+                  <li>CSS</span></li>
+                  <li>SQL</span></li>
+                  <li>Algorithms and data structures</span></li>
+                  <li>Understanding of SOLID principles</span></li>
+                </ul>
+              </div>
+
+              <div class="skills__text">
+                <h3>Soft Skills</h3>
+                <ul>
+                  <li>Conscientious</span></li>
+                  <li>Goal-oriented</span></li>
+                  <li>Polite</span></li>
+                  <li>Outgoing</span></li>
+                  <li>Reliable</span></li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -116,18 +144,16 @@
               <h3 class="experiences__header">Experience</h3>
               <div class="experiences__company">
                 <div class="experiences__company-header">
-                  <span class="experiences__company-header-durability">For whole my life</span>
-                  <h3 class="experiences__company-header-name">BinaryStudio</h3>
+                  <span class="experiences__company-header-durability">September 2019 - September 2021 | Ukraine</span>
+                  <h3 class="experiences__company-header-name">Admin in Hotel (Part-time)</h3>
                 </div>
               
                 <div class="experiences__company-project">
-                  <span class="experiences__company-project-role">Binary Studio Cat</span>
-                  <h3 class="experiences__company-project-name">Hooman project</h3>
+                  <h3 class="experiences__company-project-name">Skills acquired in this position:</h3>
                   <ul class="experiences__company-project-responsibilities">
-                    <li>Supported hoomans</li>
-                    <li>Slept all the time</li>
-                    <li>Lied on the keyboard</li>
-                    <li>Watched my hoomans working</li>
+                    <li>Finding a common language with people and work in a team</li>
+                    <li>Getting out of difficult situations</li>
+                    <li>Improved my English</li>
                   </ul>
                 </div>
               </div>
@@ -137,22 +163,17 @@
               <div class="additional-info__education">
                 <h3 class="additional-info__education-header">Education</h3>
                 <div class="additional-info__education-university">
-                  <span class="additional-info__education-university-durability">2021</span>
-                  <h3 class="additional-info__education-university-speciality">Cat track</h3>
-                  <p class="additional-info__education-university-name">Binary Studio Academy</p>
+                  <span class="additional-info__education-university-durability">September 2020 - up to now | Ukraine</span>
+                  <h3 class="additional-info__education-university-speciality">Lviv Ivan Franko National University</h3>
+                  <p class="additional-info__education-university-name">Computer Science</p>
                 </div>
               </div>
             
               <div class="additional-info__languages">
                 <h3 class="additional-info__languages-header">Languages</h3>
                 <p class="additional-info__languages-item">
-                  Meow dialect
-                </p>
-                <p class="additional-info__languages-item">
-                  Ukrainian (understand)
-                </p>
-                <p class="additional-info__languages-item">
-                  English (don't understand)
+                  English - Upper-Intermediate
+                  (Green Forest English course)
                 </p>
               </div>
             </div>
